--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -8,12 +8,10 @@
   margin: auto;
   transition: ease-in;
 }
-
 .card {
   height: 450px;
   width: 350px;
   border-radius: 25px;
-
   position: absolute;
   transform-style: preserve-3d;
   transition: all 0.4s ease-in-out;
@@ -25,16 +23,17 @@
 }
 
 .card .front {
-
   height: 450px;
   width: 350px;
+  padding-left: 10px;
+  padding-right: 10px;
   border-radius: 15px;
   backface-visibility: hidden;
   position: absolute;
   overflow: hidden;
   text-align: center;
   background-color:#950740;
-  
+
 }
 
 .card .back {
@@ -42,6 +41,7 @@
   width: 350px;
   border-radius: 15px;
   text-align: center;
+  position: absolute;
   transform: rotateY(180deg);
   background-color: #950740;
 }
